force-app/main/default/objects/Menu__c/fields/except_basic_pack_a__c.field-meta.xml
<CustomField>
    <fullName>except_basic_pack_a__c</fullName>
    <label>基本パック以外_A</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>インタースティシャルPC</fullName>
            </value>
            <value>
                <fullName>ターゲティングレクタングル</fullName>
            </value>
            <value>
                <fullName>ビューアブルレクタングル</fullName>
            </value>
            <value>
                <fullName>ダブルレクタングル</fullName>
            </value>
            <value>
                <fullName>インリード動画PC</fullName>
            </value>
            <value>
                <fullName>ゲート＆レクタングル</fullName>
            </value>
            <value>
                <fullName>レクタングルエキスパンド</fullName>
            </value>
            <value>
                <fullName>ビルボード（静止画）</fullName>
            </value>
            <value>
                <fullName>ビルボード（動画）</fullName>
            </value>
            <value>
                <fullName>PCインデックス</fullName>
            </value>
            <value>
                <fullName>テキストPCトレンドウォッチ</fullName>
            </value>
            <value>
                <fullName>PCトピックボード</fullName>
            </value>
            <value>
                <fullName>PCトレンドライブラリ</fullName>
            </value>
            <value>
                <fullName>イメージ・テキストSP</fullName>
            </value>
            <value>
                <fullName>レクタングルPC長期連載記事広告誘導</fullName>
            </value>
            <value>
                <fullName>パネルSP長期連載記事広告誘導</fullName>
            </value>
            <value>
                <fullName>インタースティシャルSP</fullName>
            </value>
            <value>
                <fullName>パネルSPヘッダー</fullName>
            </value>
            <value>
                <fullName>インリード動画SP</fullName>
            </value>
            <value>
                <fullName>ビルボードSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>