force-app/main/default/objects/Menu__c/fields/except_basic_pack_b__c.field-meta.xml
<CustomField>
    <fullName>except_basic_pack_b__c</fullName>
    <label>基本パック以外_B</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>東洋経済メール（全配信）※配信時間帯も記入</fullName>
            </value>
            <value>
                <fullName>東洋経済ターゲティングメール※配信時間帯も記入</fullName>
            </value>
            <value>
                <fullName>東洋経済オンライン編集部メール※何本目指定も記入</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>