force-app/main/default/objects/Menu__c/fields/GA__c.field-meta.xml
<CustomField>
    <fullName>GA__c</fullName>
    <description>HYPERLINK ( &quot;https://docs.google.com/spreadsheets/d/1uho6lxRnrNtM_3H4aH8ydx5k_ClEyJe-RZrbWoddeVo/edit#gid=1271690177&quot; , &quot;GA入力&quot; )</description>
    <formula>HYPERLINK ( &quot;https://docs.google.com/spreadsheets/d/1uho6lxRnrNtM_3H4aH8ydx5k_ClEyJe-RZrbWoddeVo/edit#gid=1271690177&quot; , &quot;GA手入力&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GA</label>
    <type>Text</type>
</CustomField>