force-app/main/default/objects/Menu__c/fields/ga_data__c.field-meta.xml
<CustomField>
    <fullName>ga_data__c</fullName>
    <label>GAデータ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>