force-app/main/default/objects/Menu__c/fields/goal_pv__c.field-meta.xml
<CustomField>
    <fullName>goal_pv__c</fullName>
    <label>目標PV数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>