force-app/main/default/objects/Menu__c/fields/googlechat_link_lead__c.field-meta.xml
<CustomField>
    <fullName>googlechat_link_lead__c</fullName>
    <formula>&quot;link&quot;</formula>
    <label>リード件数について相談はこちら</label>
    <type>Text</type>
</CustomField>