force-app/main/default/objects/Menu__c/fields/googlechat_link_leading__c.field-meta.xml
<CustomField>
    <fullName>googlechat_link_leading__c</fullName>
    <label>誘導量相談はこちら</label>
    <type>Url</type>
</CustomField>