force-app/main/default/objects/Menu__c/fields/guarantee_check__c.field-meta.xml
<CustomField>
    <fullName>guarantee_check__c</fullName>
    <label>保証</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>