force-app/main/default/objects/Menu__c/fields/guarantee_lead__c.field-meta.xml
<CustomField>
    <fullName>guarantee_lead__c</fullName>
    <label>保証リード数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>