force-app/main/default/objects/Menu__c/fields/guarantee_pv__c.field-meta.xml
<CustomField>
    <fullName>guarantee_pv__c</fullName>
    <label>保証PV数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>