force-app/main/default/objects/Menu__c/fields/guarantee_pv_in__c.field-meta.xml
<CustomField>
    <fullName>guarantee_pv_in__c</fullName>
    <label>保証PVの内訳</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>誘導枠のみ（1ページ目）</fullName>
            </value>
            <value>
                <fullName>誘導枠のみ（全ページ）</fullName>
            </value>
            <value>
                <fullName>全て込み（1ページ目）</fullName>
            </value>
            <value>
                <fullName>全て込み（全ページ）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>