force-app/main/default/objects/Menu__c/fields/honsuu__c.field-meta.xml
<CustomField>
    <fullName>honsuu__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>スナップショット用本数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>