force-app/main/default/objects/Menu__c/fields/impressions__c.field-meta.xml
<CustomField>
    <fullName>impressions__c</fullName>
    <label>imp数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>