force-app/main/default/objects/Menu__c/fields/insatsu_hacchu__c.field-meta.xml
<CustomField>
    <fullName>insatsu_hacchu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>印刷所に発注しました</label>
    <type>Checkbox</type>
</CustomField>