force-app/main/default/objects/Menu__c/fields/installation_date__c.field-meta.xml
<CustomField>
    <fullName>installation_date__c</fullName>
    <label>搬入日</label>
    <type>Date</type>
</CustomField>