force-app/main/default/objects/Menu__c/fields/invoice_address__c.field-meta.xml
<CustomField>
    <fullName>invoice_address__c</fullName>
    <label>請求書送付先住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>