force-app/main/default/objects/Menu__c/fields/invoice_address_list__c.field-meta.xml
<CustomField>
    <fullName>invoice_address_list__c</fullName>
    <inlineHelpText>請求書住所について請求書住所、①～⑤を選び保存してください。</inlineHelpText>
    <label>請求書送付先住所選択</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>請求先住所</fullName>
            </value>
            <value>
                <fullName>①</fullName>
            </value>
            <value>
                <fullName>②</fullName>
            </value>
            <value>
                <fullName>③</fullName>
            </value>
            <value>
                <fullName>④</fullName>
            </value>
            <value>
                <fullName>⑤</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>