force-app/main/default/objects/Menu__c/fields/invoice_comment__c.field-meta.xml
<CustomField>
    <fullName>invoice_comment__c</fullName>
    <label>請求書送付先コメント欄</label>
    <type>TextArea</type>
</CustomField>