force-app/main/default/objects/Menu__c/fields/invoice_person__c.field-meta.xml
<CustomField>
    <fullName>invoice_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求書送付先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>メニュー</relationshipLabel>
    <relationshipName>invoice_person</relationshipName>
    <type>Lookup</type>
</CustomField>