force-app/main/default/objects/Menu__c/fields/invoice_person_company__c.field-meta.xml
<CustomField>
    <fullName>invoice_person_company__c</fullName>
    <formula>invoice_person__r.Account.Name</formula>
    <label>請求書送付先担当者_会社名</label>
    <type>Text</type>
</CustomField>