force-app/main/default/objects/Menu__c/fields/invoice_person_depertment__c.field-meta.xml
<CustomField>
    <fullName>invoice_person_depertment__c</fullName>
    <formula>invoice_person__r.Department</formula>
    <label>請求書送付先担当者_部署</label>
    <type>Text</type>
</CustomField>