force-app/main/default/objects/Menu__c/fields/invoice_person_name__c.field-meta.xml
<CustomField>
    <fullName>invoice_person_name__c</fullName>
    <formula>invoice_person__r.LastName + invoice_person__r.FirstName</formula>
    <label>請求書送付先担当者_名前</label>
    <type>Text</type>
</CustomField>