force-app/main/default/objects/Menu__c/fields/ISCLONE__c.field-meta.xml
<CustomField>
    <fullName>ISCLONE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>コピーレコード</label>
    <type>Checkbox</type>
</CustomField>