force-app/main/default/objects/Menu__c/fields/jissekigoukei__c.field-meta.xml
<CustomField>
    <fullName>jissekigoukei__c</fullName>
    <formula>choku_keiyakugaku__c + agency_keiyakugaku__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>実績合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>