force-app/main/default/objects/Menu__c/fields/kaigai_torihiki__c.field-meta.xml
<CustomField>
    <fullName>kaigai_torihiki__c</fullName>
    <formula>custom_opportunity__r.clent_name__r.kaigai_torihiki__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>海外取引</label>
    <type>Checkbox</type>
</CustomField>