force-app/main/default/objects/Menu__c/fields/kentouchu__c.field-meta.xml
<CustomField>
    <fullName>kentouchu__c</fullName>
    <formula>IF ( ISPICKVAL ( custom_opportunity__r.syoudan_status__c , &quot;否決&quot; ) , 0 , 
CASE ( menu_status__c , 
&quot;検討C&quot; , total_fee2__c , 
&quot;検討B&quot; , total_fee2__c , 
&quot;検討A&quot; , total_fee2__c , 
&quot;内定&quot; , total_fee2__c , 
0 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>商談の状態が　検討C-Aと内定　の場合、総額請求金・契約金額（税抜、メニュー）の金額を表示</inlineHelpText>
    <label>検討中</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>