force-app/main/default/objects/Menu__c/fields/kouryoubi__c.field-meta.xml
<CustomField>
    <fullName>kouryoubi__c</fullName>
    <formula>magazine_type__r.kouryoubi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>校了日</label>
    <type>Date</type>
</CustomField>