force-app/main/default/objects/Menu__c/fields/kpi__c.field-meta.xml
<CustomField>
    <fullName>kpi__c</fullName>
    <label>KPI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PV保証</fullName>
            </value>
            <value>
                <fullName>外部遷移数</fullName>
            </value>
            <value>
                <fullName>imp保証</fullName>
            </value>
            <value>
                <fullName>リード保証（通常）</fullName>
            </value>
            <value>
                <fullName>リード保証（条件あり）</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>