force-app/main/default/objects/Menu__c/fields/lead__c.field-meta.xml
<CustomField>
    <fullName>lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リード管理</label>
    <type>Checkbox</type>
</CustomField>