force-app/main/default/objects/Menu__c/fields/lead_check_checkbox__c.field-meta.xml
<CustomField>
    <fullName>lead_check_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リード管理_確認しましたチェックボックス</label>
    <type>Checkbox</type>
</CustomField>