force-app/main/default/objects/Menu__c/fields/lead_co__c.field-meta.xml
<CustomField>
    <fullName>lead_co__c</fullName>
    <label>期間内にリード達成した場合の対応</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>誘導停止</fullName>
            </value>
            <value>
                <fullName>誘導量を10に減らして終了まで掲載</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>