force-app/main/default/objects/Menu__c/fields/lead_end_date__c.field-meta.xml
<CustomField>
    <fullName>lead_end_date__c</fullName>
    <label>リード_終了日</label>
    <type>Date</type>
</CustomField>