force-app/main/default/objects/Menu__c/fields/lead_goal_etc__c.field-meta.xml
<CustomField>
    <fullName>lead_goal_etc__c</fullName>
    <label>その他条件（セグメントなど）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>