force-app/main/default/objects/Menu__c/fields/lead_kakutoku_kikaku__c.field-meta.xml
<CustomField>
    <fullName>lead_kakutoku_kikaku__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リード獲得企画</label>
    <type>Checkbox</type>
</CustomField>