force-app/main/default/objects/Menu__c/fields/lead_kakutoku_kikaku_auto__c.field-meta.xml
<CustomField>
    <fullName>lead_kakutoku_kikaku_auto__c</fullName>
    <formula>lead_kakutoku_kikaku__c</formula>
    <label>リード獲得企画</label>
    <type>Checkbox</type>
</CustomField>