force-app/main/default/objects/Menu__c/fields/lead_number__c.field-meta.xml
<CustomField>
    <fullName>lead_number__c</fullName>
    <label>リード件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>