force-app/main/default/objects/Menu__c/fields/lead_number_condition__c.field-meta.xml
<CustomField>
    <fullName>lead_number_condition__c</fullName>
    <label>条件付きリード数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>