force-app/main/default/objects/Menu__c/fields/lead_start_date__c.field-meta.xml
<CustomField>
    <fullName>lead_start_date__c</fullName>
    <label>リード_開始日</label>
    <type>Date</type>
</CustomField>