force-app/main/default/objects/Menu__c/fields/maetsuke_kubun__c.field-meta.xml
<CustomField>
    <fullName>maetsuke_kubun__c</fullName>
    <label>前付区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ある</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>