force-app/main/default/objects/Menu__c/fields/magazine_fee__c.field-meta.xml
<CustomField>
    <fullName>magazine_fee__c</fullName>
    <label>掲載料金・受注料金（グロス、税別）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>