force-app/main/default/objects/Menu__c/fields/magazine_fee_billing_amount__c.field-meta.xml
<CustomField>
    <fullName>magazine_fee_billing_amount__c</fullName>
    <formula>magazine_fee__c - agency_fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>掲載料金（グロス、税別）－代理店手数料（メニュー）</inlineHelpText>
    <label>掲載料金・契約金請求金額（税別、メニュー）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>