force-app/main/default/objects/Menu__c/fields/magazine_fee_billing_amount_tax__c.field-meta.xml
<CustomField>
    <fullName>magazine_fee_billing_amount_tax__c</fullName>
    <formula>magazine_fee_billing_amount__c * (  1 + tax_rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>掲載料金・契約金請求金額（税別、メニュー）×（1+消費税率）</inlineHelpText>
    <label>掲載料金・契約金請求金額（税込、メニュー）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>