force-app/main/default/objects/Menu__c/fields/magazine_type__c.field-meta.xml
<CustomField>
    <fullName>magazine_type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>号数</label>
    <referenceTo>HakkanYosanMaster__c</referenceTo>
    <relationshipLabel>メニュー</relationshipLabel>
    <relationshipName>XXrR</relationshipName>
    <type>Lookup</type>
</CustomField>