force-app/main/default/objects/Menu__c/fields/mail_yoyaku__c.field-meta.xml
<CustomField>
    <fullName>mail_yoyaku__c</fullName>
    <defaultValue>false</defaultValue>
    <label>メール予約</label>
    <type>Checkbox</type>
</CustomField>