force-app/main/default/objects/Menu__c/fields/menu_memo__c.field-meta.xml
<CustomField>
    <fullName>menu_memo__c</fullName>
    <label>メモ</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>