force-app/main/default/objects/Menu__c/fields/menu_status__c.field-meta.xml
<CustomField>
    <fullName>menu_status__c</fullName>
    <label>メニューの状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>検討C</fullName>
            </value>
            <value>
                <fullName>検討B</fullName>
            </value>
            <value>
                <fullName>検討A</fullName>
            </value>
            <value>
                <fullName>内定</fullName>
            </value>
            <value>
                <fullName>成約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>