force-app/main/default/objects/Menu__c/fields/menu_step__c.field-meta.xml
<CustomField>
    <fullName>menu_step__c</fullName>
    <label>次回ステップ</label>
    <type>TextArea</type>
</CustomField>