force-app/main/default/objects/Menu__c/fields/menu_type__c.field-meta.xml
<CustomField>
    <fullName>menu_type__c</fullName>
    <label>メニュー名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>雑誌</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>メールタイアップ</fullName>
            </value>
            <value>
                <fullName>DMPレポーティング</fullName>
            </value>
            <value>
                <fullName>アンケート</fullName>
            </value>
            <value>
                <fullName>ブースト</fullName>
            </value>
            <value>
                <fullName>本誌抜刷</fullName>
            </value>
            <value>
                <fullName>オンライン抜刷</fullName>
            </value>
            <value>
                <fullName>集客</fullName>
            </value>
            <value>
                <fullName>運営（集客含む）</fullName>
            </value>
            <value>
                <fullName>自主企画</fullName>
            </value>
            <value>
                <fullName>受講料</fullName>
            </value>
            <value>
                <fullName>講師派遣</fullName>
            </value>
            <value>
                <fullName>カスタム書籍制作</fullName>
            </value>
            <value>
                <fullName>カスタム雑誌制作</fullName>
            </value>
            <value>
                <fullName>就職手帳</fullName>
            </value>
            <value>
                <fullName>ツール制作</fullName>
            </value>
            <value>
                <fullName>社史</fullName>
            </value>
            <value>
                <fullName>広報誌（PR誌）</fullName>
            </value>
            <value>
                <fullName>書籍・雑誌購入</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>写真・画像２次使用料</fullName>
            </value>
            <value>
                <fullName>同梱</fullName>
            </value>
            <value>
                <fullName>謝礼</fullName>
            </value>
            <value>
                <fullName>電子書籍</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>カスタム</fullName>
                <isActive>false</isActive>
                <label>カスタム</label>
            </value>
            <value>
                <fullName>スクール</fullName>
                <isActive>false</isActive>
                <label>スクール</label>
            </value>
            <value>
                <fullName>セミナー</fullName>
                <isActive>false</isActive>
                <label>セミナー</label>
            </value>
            <value>
                <fullName>抜刷</fullName>
                <isActive>false</isActive>
                <label>抜刷</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>