force-app/main/default/objects/Menu__c/fields/merit__c.field-meta.xml
<CustomField>
    <fullName>merit__c</fullName>
    <label>製作費のかけ方希望：〇％程度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>