force-app/main/default/objects/Menu__c/fields/not_standard_pack__c.field-meta.xml
<CustomField>
    <fullName>not_standard_pack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>基本パック以外</label>
    <type>Checkbox</type>
</CustomField>