force-app/main/default/objects/Menu__c/fields/note__c.field-meta.xml
<CustomField>
    <fullName>note__c</fullName>
    <formula>HYPERLINK ( &quot;https://biz.toyokeizai.net/direct/topics/topics_file_download/?topics_id=468&amp;ext_no=02&amp;index=0&amp;disp=inline参照&quot;, &quot;注意書き&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>注意書き</label>
    <type>Text</type>
</CustomField>