force-app/main/default/objects/Menu__c/fields/nukizuri_4_design__c.field-meta.xml
<CustomField>
    <fullName>nukizuri_4_design__c</fullName>
    <label>表4デザイン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>