force-app/main/default/objects/Menu__c/fields/nukizuri_by_date__c.field-meta.xml
<CustomField>
    <fullName>nukizuri_by_date__c</fullName>
    <label>納品日</label>
    <type>Date</type>
</CustomField>