force-app/main/default/objects/Menu__c/fields/nukizuri_copies__c.field-meta.xml
<CustomField>
    <fullName>nukizuri_copies__c</fullName>
    <label>総部数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>