force-app/main/default/objects/Menu__c/fields/nukizuri_design__c.field-meta.xml
<CustomField>
    <fullName>nukizuri_design__c</fullName>
    <label>表紙デザイン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5－a</fullName>
            </value>
            <value>
                <fullName>5－b</fullName>
            </value>
            <value>
                <fullName>5－c</fullName>
            </value>
            <value>
                <fullName>5－d</fullName>
            </value>
            <value>
                <fullName>5－e</fullName>
            </value>
            <value>
                <fullName>5－f</fullName>
            </value>
            <value>
                <fullName>5－g</fullName>
            </value>
            <value>
                <fullName>6（オリジナル）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>