force-app/main/default/objects/Menu__c/fields/nukizuri_page__c.field-meta.xml
<CustomField>
    <fullName>nukizuri_page__c</fullName>
    <label>総ページ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>