force-app/main/default/objects/Menu__c/fields/nukizuri_size__c.field-meta.xml
<CustomField>
    <fullName>nukizuri_size__c</fullName>
    <label>抜刷サイズ・開き方</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A4変形右開き（週間東洋経済デフォルト）</fullName>
            </value>
            <value>
                <fullName>A4正寸左開き（オンラインデフォルト）</fullName>
            </value>
            <value>
                <fullName>A4正寸右開き</fullName>
            </value>
            <value>
                <fullName>A4変形左開き</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>