force-app/main/default/objects/Menu__c/fields/nukizuri_tenpu__c.field-meta.xml
<CustomField>
    <fullName>nukizuri_tenpu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>抜刷り、株主優待先住所などデータ添付</label>
    <type>Checkbox</type>
</CustomField>