force-app/main/default/objects/Menu__c/fields/Oldoperating_profit__c.field-meta.xml
<CustomField>
    <fullName>Oldoperating_profit__c</fullName>
    <label>Old営業利益</label>
    <length>255</length>
    <type>Text</type>
</CustomField>