force-app/main/default/objects/Menu__c/fields/Oldproduct_cost__c.field-meta.xml
<CustomField>
    <fullName>Oldproduct_cost__c</fullName>
    <label>Old制作にかかった金額（雑誌）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>