force-app/main/default/objects/Menu__c/fields/Olds_menu__c.field-meta.xml
<CustomField>
    <fullName>Olds_menu__c</fullName>
    <formula>MID ( RecordType.Name , FIND ( &quot;:&quot; , RecordType.Name ) +1 , 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>実績スナップショット用</inlineHelpText>
    <label>Oldメニュー</label>
    <type>Text</type>
</CustomField>