force-app/main/default/objects/Menu__c/fields/Oldshubetsu__c.field-meta.xml
<CustomField>
    <fullName>Oldshubetsu__c</fullName>
    <formula>&quot;実績&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oldスナップショット用種別</label>
    <type>Text</type>
</CustomField>