force-app/main/default/objects/Menu__c/fields/operating_profit__c.field-meta.xml
<CustomField>
    <fullName>operating_profit__c</fullName>
    <formula>product_fee__c  -  product_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>？？？？</inlineHelpText>
    <label>営業利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>