force-app/main/default/objects/Menu__c/fields/operating_profit_common_amount_divede__c.field-meta.xml
<CustomField>
    <fullName>operating_profit_common_amount_divede__c</fullName>
    <formula>total_fee2__c - ( product_cost__c + common_amount_divede__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>総額請求金・契約金額（税抜、メニュー）－ ( 制作にかかった費用（メニュー）＋共通費（按分後、メニュー） )</inlineHelpText>
    <label>営業利益・共通費込（税抜、メニュー）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>