force-app/main/default/objects/Menu__c/fields/OpportunityLink__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLink__c</fullName>
    <formula>&quot;https://cs5.lightning.force.com/&quot; + custom_opportunity__r.Id</formula>
    <label>出力用_商談リンク</label>
    <type>Text</type>
</CustomField>