force-app/main/default/objects/Menu__c/fields/other_tag__c.field-meta.xml
<CustomField>
    <fullName>other_tag__c</fullName>
    <label>その他のタグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>