force-app/main/default/objects/Menu__c/fields/page_number__c.field-meta.xml
<CustomField>
    <fullName>page_number__c</fullName>
    <label>ページ数</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>baitai_name__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>page_number</valueSetName>
    </valueSet>
</CustomField>