force-app/main/default/objects/Menu__c/fields/pc_emergent_check__c.field-meta.xml
<CustomField>
    <fullName>pc_emergent_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC 緊急枠</label>
    <type>Checkbox</type>
</CustomField>