force-app/main/default/objects/Menu__c/fields/pc_goal__c.field-meta.xml
<CustomField>
    <fullName>pc_goal__c</fullName>
    <label>PC目標*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>