force-app/main/default/objects/Menu__c/fields/pc_goal_check__c.field-meta.xml
<CustomField>
    <fullName>pc_goal_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC目標</label>
    <type>Checkbox</type>
</CustomField>