force-app/main/default/objects/Menu__c/fields/pc_imp_guarantee_check__c.field-meta.xml
<CustomField>
    <fullName>pc_imp_guarantee_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC imp保証</label>
    <type>Checkbox</type>
</CustomField>