force-app/main/default/objects/Menu__c/fields/period__c.field-meta.xml
<CustomField>
    <fullName>period__c</fullName>
    <label>期間</label>
    <type>Date</type>
</CustomField>