force-app/main/default/objects/Menu__c/fields/problem_solving__c.field-meta.xml
<CustomField>
    <fullName>problem_solving__c</fullName>
    <label>課題解決のための手段</label>
    <type>TextArea</type>
</CustomField>