force-app/main/default/objects/Menu__c/fields/product_code__c.field-meta.xml
<CustomField>
    <fullName>product_code__c</fullName>
    <label>プロダクトコード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>