force-app/main/default/objects/Menu__c/fields/product_code_formula__c.field-meta.xml
<CustomField>
    <fullName>product_code_formula__c</fullName>
    <formula>magazine_type__r.product_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>プロダクトコード</label>
    <type>Text</type>
</CustomField>