force-app/main/default/objects/Menu__c/fields/product_cost2__c.field-meta.xml
<CustomField>
    <fullName>product_cost2__c</fullName>
    <formula>product_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>実績スナップショット用</inlineHelpText>
    <label>その他コスト</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>