force-app/main/default/objects/Menu__c/fields/product_cost__c.field-meta.xml
<CustomField>
    <fullName>product_cost__c</fullName>
    <inlineHelpText>費用（税別）の積み上げ集計</inlineHelpText>
    <label>制作にかかった費用（メニュー）</label>
    <summarizedField>SeisakuSiharai__c.product_cost__c</summarizedField>
    <summaryForeignKey>SeisakuSiharai__c.menu__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>