force-app/main/default/objects/Menu__c/fields/product_fee3__c.field-meta.xml
<CustomField>
    <fullName>product_fee3__c</fullName>
    <formula>product_fee2__c * ( 1 + tax_rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>制作費・講師派遣料（税抜、メニュー）×（1+消費税率）</inlineHelpText>
    <label>制作費・講師派遣料（税込、メニュー）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>