force-app/main/default/objects/Menu__c/fields/product_fee__c.field-meta.xml
<CustomField>
    <fullName>product_fee__c</fullName>
    <label>制作費（ネット、税別）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>