force-app/main/default/objects/Menu__c/fields/product_fee_tax__c.field-meta.xml
<CustomField>
    <fullName>product_fee_tax__c</fullName>
    <formula>product_fee__c * tax_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>制作費（税別）×消費税率</inlineHelpText>
    <label>制作費/講師派遣料（税込）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>