force-app/main/default/objects/Menu__c/fields/published_page__c.field-meta.xml
<CustomField>
    <fullName>published_page__c</fullName>
    <label>掲載面</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>baitai_name__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>published_page</valueSetName>
    </valueSet>
</CustomField>