force-app/main/default/objects/Menu__c/fields/PV__c.field-meta.xml
<CustomField>
    <fullName>PV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV管理</label>
    <type>Checkbox</type>
</CustomField>