force-app/main/default/objects/Menu__c/fields/pv_arrange__c.field-meta.xml
<CustomField>
    <fullName>pv_arrange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>調整お任せ</label>
    <type>Checkbox</type>
</CustomField>