force-app/main/default/objects/Menu__c/fields/pv_check_checkbox__c.field-meta.xml
<CustomField>
    <fullName>pv_check_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV管理_確認しましたチェックボックス</label>
    <type>Checkbox</type>
</CustomField>